[package]
name = "bantamlisp"
version = "0.0.0-predev"
authors = ["ember arlynx <ember@lunar.town>"]
edition = "2021"
rust-version = "1.63.0"
description = "a standard ML and more"
repository = "https://github.com/emberian/bantaML.git"
license = "MIT OR Apache-2.0"
keywords = ["language", "runtime", "lisp", "interpreter"]
categories = ["compilers", ]

publish = false # no accidents while in dev

[features]
default = []
full = []

[dependencies]
serde = { version = "1", default-features = false, features = ["serde_derive"] }
envy = "0.4"
once_cell = "1"
libc = "*"
bantaml-macros = { path = "macros" }
[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1"

[package.metadata.cargo-udeps.ignore]
development = ["criterion", "pretty_assertions"]

[package.metadata.playground]
features = ["full"]

#[profile.release]
#codegen-units = 1
#incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[bench]]
name = "benches"
harness = false
required-features = ["full"]
